lookup prices at coinlayer and coinmarketcap, add cache

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+spring.cache.cache-names=assetValues
+spring.cache.caffeine.spec=maximumSize=100000,expireAfterAccess=60m
 
+assetpriceservice.version=1
