call xrplmeta to get token prices

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,1 @@
-spring.cache.cache-names=assetValues
-spring.cache.caffeine.spec=maximumSize=100000,expireAfterAccess=60m
-
-assetpriceservice.version=1
+assetpriceservice.version=08172022-1
